adding lang='en'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Google</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
